ERROR-LOG.txt
matt@HungLoDE:~/Documents/Repos/MattMC$ /bin/bash /home/matt/Documents/Repos/MattMC/RunDev.sh

> Configure project :
✓ Using bundled dependencies from libraries/deps/
  Run './libraries/download-dependencies.sh' to update bundled dependencies
Path for java installation '/usr/lib/jvm/openjdk-17' (Common Linux Locations) does not contain a java executable
Path for java installation '/usr/lib/jvm/openjdk-21' (Common Linux Locations) does not contain a java executable

> Task :copyJdkToRun
📂 Copying JDK to run directory...
✅ JDK copied to /home/matt/Documents/Repos/MattMC/run/jdk-21

> Task :compileJava FAILED
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:255: error: package com.seibel.distanthorizons.core.api.internal does not exist
import com.seibel.distanthorizons.core.api.internal.ClientApi;
                                                   ^
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:256: error: package com.seibel.distanthorizons.common.wrappers.world does not exist
import com.seibel.distanthorizons.common.wrappers.world.ClientLevelWrapper;
                                                       ^
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:2171: error: package ClientApi does not exist
                        ClientApi.INSTANCE.clientLevelLoadEvent(ClientLevelWrapper.getWrapper(clientLevel, true));
                                 ^
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:2171: error: cannot find symbol
                        ClientApi.INSTANCE.clientLevelLoadEvent(ClientLevelWrapper.getWrapper(clientLevel, true));
                                                                ^
  symbol:   variable ClientLevelWrapper
  location: class Minecraft
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
4 actionable tasks: 2 executed, 2 up-to-date
matt@HungLoDE:~/Documents/Repos/MattMC$ ./gradlew clean build

> Configure project :
✓ Using bundled dependencies from libraries/deps/
  Run './libraries/download-dependencies.sh' to update bundled dependencies
Path for java installation '/usr/lib/jvm/openjdk-21' (Common Linux Locations) does not contain a java executable
Path for java installation '/usr/lib/jvm/openjdk-17' (Common Linux Locations) does not contain a java executable

> Task :compileJava
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:255: error: package com.seibel.distanthorizons.core.api.internal does not exist
import com.seibel.distanthorizons.core.api.internal.ClientApi;
                                                   ^
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:256: error: package com.seibel.distanthorizons.common.wrappers.world does not exist
import com.seibel.distanthorizons.common.wrappers.world.ClientLevelWrapper;
                                                       ^
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:2171: error: package ClientApi does not exist
                        ClientApi.INSTANCE.clientLevelLoadEvent(ClientLevelWrapper.getWrapper(clientLevel, true));
                                 ^
/home/matt/Documents/Repos/MattMC/net/minecraft/client/Minecraft.java:2171: error: cannot find symbol
                        ClientApi.INSTANCE.clientLevelLoadEvent(ClientLevelWrapper.getWrapper(clientLevel, true));
                                                                ^
  symbol:   variable ClientLevelWrapper
  location: class Minecraft
/home/matt/Documents/Repos/MattMC/net/minecraft/world/level/levelgen/Heightmap.java:48: warning: [removal] getHighestSectionPosition() in ChunkAccess has been deprecated and marked for removal
                        int j = chunkAccess.getHighestSectionPosition() + 16;
                                           ^
/home/matt/Documents/Repos/MattMC/net/minecraft/world/level/levelgen/placement/NoiseBasedCountPlacement.java:35: warning: [removal] BIOME_INFO_NOISE in Biome has been deprecated and marked for removal
                double d = Biome.BIOME_INFO_NOISE.getValue(blockPos.getX() / this.noiseFactor, blockPos.getZ() / this.noiseFactor, false);
                                ^
/home/matt/Documents/Repos/MattMC/net/minecraft/world/level/levelgen/placement/NoiseThresholdCountPlacement.java:35: warning: [removal] BIOME_INFO_NOISE in Biome has been deprecated and marked for removal
                double d = Biome.BIOME_INFO_NOISE.getValue(blockPos.getX() / 200.0, blockPos.getZ() / 200.0, false);
                                ^
/home/matt/Documents/Repos/MattMC/net/minecraft/world/level/block/entity/TheEndGatewayBlockEntity.java:228: warning: [removal] getHighestSectionPosition() in ChunkAccess has been deprecated and marked for removal
                int i = levelChunk.getHighestSectionPosition() + 16 - 1;
                                  ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
4 warnings

> Task :compileJava FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 9s
4 actionable tasks: 3 executed, 1 from cache
matt@HungLoDE:~/Documents/Repos/MattMC$



